--- a/index.html
+++ b/index.html
@@ -11,14 +11,24 @@
 </head>
 <body>
 
-  Equilibrium #3429
-
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
+  <main>
+    <div class="container">
+      <div class="image">
+        <img src="./images/image-equilibrium.jpg" alt="image qr code">
+      </div>
+      <div class="title"> Equilibrium #3429</div>
+      <div class="description">
+        Our Equilibrium collection promotes balance and calm.
+      </div>
+      <div class="info">
+        <div class="value"><img src="./images/icon-ethereum.svg" alt="ethereum.">0.041 ETH</div>
+        <div class="timeleft"><img src="./images/icon-clock.svg" alt="icon-clock">3 days left</div>
+      </div>
+    </hr>
+    <p class="author"> Creation of Jules Wyvern</p>
+    </div>
+  </main>
 
 </body>
 </html>
+
