--- a/index.html
+++ b/index.html
@@ -16,18 +16,23 @@
       <div class="image">
         <img src="./images/image-equilibrium.jpg" alt="image qr code">
       </div>
-      <div class="title"> Equilibrium #3429</div>
-      <div class="description">
-        Our Equilibrium collection promotes balance and calm.
+      <div class="content">
+        <div class="title"> Equilibrium #3429</div>
+        <div class="description">
+          Our Equilibrium collection promotes balance and calm.
+        </div>
+        <div class="info">
+          <div class="value"><img src="./images/icon-ethereum.svg" alt="ethereum.">0.041 ETH</div>
+          <div class="timeleft"><img src="./images/icon-clock.svg" alt="icon-clock">3 days left</div>
+        </div>
+        <div class="horizontalline"></div>
+        <div class="author">
+          <img src="./images/image-avatar.png" alt="author">
+          <p class="author-name"><span>Creation of </span> Jules Wyvern</p>
+        </div>
       </div>
-      <div class="info">
-        <div class="value"><img src="./images/icon-ethereum.svg" alt="ethereum.">0.041 ETH</div>
-        <div class="timeleft"><img src="./images/icon-clock.svg" alt="icon-clock">3 days left</div>
-      </div>
-    </hr>
-    <p class="author"> Creation of Jules Wyvern</p>
     </div>
-  </main>
+  </main>ß
 
 </body>
 </html>
