--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <div class="horizontalline"></div>
         <div class="author">
           <img src="./images/image-avatar.png" alt="author">
-          <p class="author-name"><span>Creation of </span> Jules Wyvern</p>
+          <p class="author-name">Creation of <span> Jules Wyvern</span> </p>
         </div>
       </div>
     </div>
-  </main>ß
+  </main>
 
 </body>
 </html>
